--- a/Task 2/Task 2.ipynb
+++ b/Task 2/Task 2.ipynb
@@ -2,18 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 246,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from math import sqrt\n",
-    "from enum import Enum"
+    "from enum import Enum\n",
+    "from math import pow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class neighbouringNodes:\n",
@@ -54,19 +59,31 @@
     "            yCoord = args[2]\n",
     "            m = args[3]\n",
     "            shapeType = args[4]\n",
+    "            \n",
+    "            #check if x & y coordinates lie within the grid\n",
+    "            if(xCoord<0 or xCoord>=self.size or yCoord<0 or yCoord>=self.size):\n",
+    "                print(\"The origin node lies outside the grid. Enter different coordinates\")\n",
+    "                return\n",
     "                    \n",
     "        elif(len(args)) == 4:\n",
     "            grid = args[0]\n",
     "            index = args[1] \n",
     "            m = args[2] \n",
     "            shapeType = args[3]\n",
-    "            xCoord = self.getNodeCoordinates(grid, index)[0]\n",
-    "            yCoord = self.getNodeCoordinates(grid, index)[1]\n",
+    "            \n",
+    "            if(index> pow(self.size,2)):\n",
+    "                print(\"The origin node lies outside the grid. Enter different coordinates\")\n",
+    "                return\n",
+    "            else:\n",
+    "                xCoord = self.getNodeCoordinates(grid, index)[0]\n",
+    "                yCoord = self.getNodeCoordinates(grid, index)[1]\n",
     "            \n",
     "        else:\n",
     "            print(\"\\033[0;31;1mPlease enter valid parameters\")\n",
     "            return\n",
     "        \n",
+    "        \n",
+    "        #Check if radius lies within the grid\n",
     "        if (xCoord-m)<0 or (yCoord-m)<0 or (xCoord+m)>=self.size or (yCoord+m)>=self.size:\n",
     "                print(\"The given radius exceeds the grid boundaries. Try again.\")\n",
     "                return\n",
@@ -100,18 +117,29 @@
     "        print(\"New grid:\")\n",
     "        for i in range(self.size):\n",
     "            for j in range(self.size):\n",
-    "                if(gridx[i][j].origin):\n",
-    "                    print(\"\\033[0;31;35m\",gridx[i][j].printCoordinates(), end=\"\\033[0;30;0m \")\n",
-    "                elif(gridx[i][j].neighbour):\n",
-    "                    print(\"\\033[0;31;11m\",gridx[i][j].printCoordinates(), end=\"\\033[0;30;0m \")\n",
+    "                if(grid[i][j].origin):\n",
+    "                    print(\"\\033[0;31;35m\",grid[i][j].printCoordinates(), end=\"\\033[0;30;0m \")\n",
+    "                elif(grid[i][j].neighbour):\n",
+    "                    print(\"\\033[0;31;11m\",grid[i][j].printCoordinates(), end=\"\\033[0;30;0m \")\n",
     "                else:\n",
-    "                    print(gridx[i][j].printCoordinates(), end=\" \")\n",
-    "            print(\"\\n\")"
+    "                    print(grid[i][j].printCoordinates(), end=\" \")\n",
+    "            print(\"\\n\")\n",
+    "            \n",
+    "    def shapeCoords(self, grid):\n",
+    "        print(\"Coordinates:\")\n",
+    "        for i in range(self.size):\n",
+    "            for j in range(self.size):\n",
+    "                if(grid[i][j].origin):\n",
+    "                    print(\"\\033[0;31;35m\",grid[i][j].printCoordinates(), end=\"\\033[0;30;0m\\n\")\n",
+    "                if(grid[i][j].neighbour):\n",
+    "                    print(\"\\033[0;31;11m\",grid[i][j].printCoordinates(), end=\"\\033[0;30;0m\\n\")\n",
+    "\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -164,51 +192,9 @@
       "(5, 0, 36) (5, 1, 37) (5, 2, 38) (5, 3, 39) (5, 4, 40) (5, 5, 41) (5, 6, 42) \n",
       "\n",
       "(6, 0, 43) (6, 1, 44) (6, 2, 45) (6, 3, 46) (6, 4, 47) (6, 5, 48) (6, 6, 49) \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create object and run the function \n",
-    "x= neighbouringNodes(7, True)\n",
-    "gridx = x.constructGrid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 459,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Node coordinates: (1, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Node coordinates:\", x.getNodeCoordinates(gridx, 12))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NOTE: If the arguments are being changed in setShape, the original grid might have to be intialized again in some cases for the changes to show"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 461,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
+      "\n",
+      "\n",
       "New grid:\n",
       "(0, 0, 1) (0, 1, 2) (0, 2, 3) \u001b[0;31;11m (0, 3, 4)\u001b[0;30;0m (0, 4, 5) (0, 5, 6) (0, 6, 7) \n",
       "\n",
@@ -223,14 +209,73 @@
       "(5, 0, 36) (5, 1, 37) \u001b[0;31;11m (5, 2, 38)\u001b[0;30;0m \u001b[0;31;11m (5, 3, 39)\u001b[0;30;0m \u001b[0;31;11m (5, 4, 40)\u001b[0;30;0m (5, 5, 41) (5, 6, 42) \n",
       "\n",
       "(6, 0, 43) (6, 1, 44) (6, 2, 45) \u001b[0;31;11m (6, 3, 46)\u001b[0;30;0m (6, 4, 47) (6, 5, 48) (6, 6, 49) \n",
-      "\n"
+      "\n",
+      "\n",
+      "\n",
+      "Coordinates:\n",
+      "\u001b[0;31;11m (0, 3, 4)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (1, 2, 10)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (1, 3, 11)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (1, 4, 12)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (2, 1, 16)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (2, 2, 17)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (2, 3, 18)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (2, 4, 19)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (2, 5, 20)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (3, 0, 22)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (3, 1, 23)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (3, 2, 24)\u001b[0;30;0m\n",
+      "\u001b[0;31;35m (3, 3, 25)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (3, 3, 25)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (3, 4, 26)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (3, 5, 27)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (3, 6, 28)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (4, 1, 30)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (4, 2, 31)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (4, 3, 32)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (4, 4, 33)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (4, 5, 34)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (5, 2, 38)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (5, 3, 39)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (5, 4, 40)\u001b[0;30;0m\n",
+      "\u001b[0;31;11m (6, 3, 46)\u001b[0;30;0m\n"
      ]
     }
    ],
    "source": [
+    "# Create object and run the function \n",
+    "x= neighbouringNodes(7, True)\n",
+    "gridx = x.constructGrid()\n",
+    "print(\"\\n\")\n",
+    "\n",
     "#Set shape\n",
-    "x.setShape(gridx, 3, 3, 3, \"diamond\")"
+    "x.setShape(gridx, 25, 3, \"diamond\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "#Show coordinates\n",
+    "x.shapeCoords(gridx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
